# libSMCE

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Config.cmake.in  DartConfiguration.tcl  Dockerfile  Dockerfile.slim  Doxyfile  LibSMCEpackaging.props  LibsmceNuget.nuspec  PKGBUILD.msys  README.md  SMCEConfig.cmake  SMCEConfigVersion.cmake  SMCE_BINDGEN_HOST_HEADER.hpp.in  SMCE_BINDGEN_HOST_IMPL.cpp.in  libSMCE.cbp  sonar-project.properties
.github/workflows/: build.yml  clang-format-check.yml  sonarcloud.yml
.scannerwork/: report-task.txt
Boost_tests/: CMakeLists.txt
CMake/BuildProfiles/: CxxStdLibDebug.cmake  DebianBookworm.cmake  DebianBullseye.cmake  DebianBuster.cmake  Fedora33.cmake  FedoraHost.cmake  OpenSuseLeap.cmake  UbuntuFocal.cmake  UbuntuGroovy.cmake  UbuntuHirsute.cmake  UbuntuImpish.cmake  UbuntuJammy.cmake  UbuntuKinetic.cmake
CMake/BuildProfiles/Common/: Debian.cmake  Fedora.cmake
CMake/Modules/: AdHocSign.cmake  BindGen.cmake  CPackCommon.cmake  CodeCoverage.cmake  Coverage.cmake  InstallFragments.cmake  RecursiveLocalExport.cmake  Resources.cmake  SetupBoost.cmake  SetupMosquitto.cmake  UserConfigVars.cmake  iSMCE.cmake  ipcSMCE.cmake
CMake/PackagingProfiles/: Archive.cmake
CMake/PackagingProfiles/Templates/: Debian.cmake  Fedora.cmake
CMake/Runtime/: ArduinoPreludeVersion.cmake  CMakeLists.txt  DownloadCacher.cmake  InstallArduinoPrelude.cmake  JuniperTranspile.cmake  LegacyPreprocessing.cmake  Preprocessing.cmake  ProbeCompilerIncdirs.cmake  ProcessManifests.cmake  UseHighestCxxStandard.cmake
CMake/Scripts/: ConfigureSketch.cmake
Client/: SMCE_Client.cpp
RtResources/Ardrivo/include/Ardrivo/: OV767X.h
RtResources/Ardrivo/share/: ArdrivoOutputNames.cmake
SMCE_Devices/TestUDD/include/: TestUDD.hpp
SMCE_Devices/TestUDD/src/: TestUDD.cpp
build_wrapper_output_directory/: build-wrapper-dump.json
ci/: cmake-interceptor.sh  locate-cmake-commands.pl  minimum-cmake-version.sh  scan-cmake-commands.sh  setup-cmake-interceptor.sh
client/: CMakeLists.txt  README.md  SMCE_Client.cpp
client/src/: UartToFile.cpp  UartToFile.hpp
extra/samples/stduart/: CMakeLists.txt  main.cpp
extra/samples/stduart/sketches/echo/: echo.ino
include/Ardrivo/: Arduino.h  ArduinoGraphics.h  Client.h  FrameBufferAccess.h  HardwareSerial.h  IPAddress.h  MQTT.h  MockDisplay.h  OV767X.h  Print.h  SD.h  SMCE.hpp  SMCE_dll.hpp  SMCE_numeric.hpp  SMCE_support.hpp  Stream.h  WString.h  WiFi.h  WiFiClient.h  analogWrite.h
include/SMCE/: Board.hpp  BoardConf.hpp  BoardDeviceFieldType.hpp  BoardDeviceSpecification.hpp  BoardDeviceView.hpp  BoardView.hpp  PluginManifest.hpp  SMCE_fs.hpp  SMCE_iface.h  Sketch.hpp  SketchConf.hpp  Toolchain.hpp  Uuid.hpp  fwd.hpp
include/SMCE/internal/: BoardData.hpp  BoardDeviceSpecification.hpp  BoardDeviceView.hpp  SharedBoardData.hpp  utils.hpp
include/SMCE/internal/portable/: ostream_joiner.hpp  scope.hpp  utility.hpp
include/SMCE_rt/: SMCE_proxies.hpp
include/SMCE_rt/internal/: BoardDeviceAllocationBases.hpp  SMCE_api.hpp  host_rt.hpp  sketch_rt.hpp
packaging/include/SMCE/: BoardConf.hpp  BoardView.hpp  SMCE_iface.h  SketchConf.hpp  Uuid.hpp  fwd.hpp
packaging/include/SMCE_rt/: SMCE_proxies.hpp
share/Ardrivo/: sketch_main.cpp
src/Ardrivo/: Arduino.cpp  ArduinoGraphics.cpp  ArduinoGraphics.h  FrameBufferAccess.cpp  HardwareSerial.cpp  MQTT.cpp  MockDisplay.cpp  OV767X.cpp  Print.cpp  SD.cpp  SMCE_main.cpp  Stream.cpp  String.cpp  UDDRuntime.cpp  WiFi.cpp
src/SMCE/: Board.cpp  BoardConf.cpp  BoardData.cpp  BoardDeviceSpecification.cpp  BoardDeviceView.cpp  BoardView.cpp  PluginManifest.cpp  SMCE_Client.cpp  SharedBoardData.cpp  SharedBoardData_host.cpp  Sketch.cpp  Toolchain.cpp  UDDRuntime.cpp  Uuid.cpp
src/SMCE_rt/: BindGenProxies.cpp
test/: Board.cpp  BoardDevice.cpp  BoardView.cpp  CMakeLists.txt  LibManagement.cpp  Polyfills.cpp  SMCE_Tests_include-b12d07c.cmake  SMCE_Tests_tests-b12d07c.cmake  Toolchain.cpp  ark-filetime.txt  defs.hpp  inflate_ark_if_different.cmake
test/manifests/: A.cmake  B.cmake  C.cmake  D.cmake  E.cmake  F.cmake  G.cmake  NoUri.cmake  RelativeUri.cmake
test/plugins/UDDProvider/src/: UDDProvider.cpp  UDDProvider.hpp
test/sketches/analogread/: analogread.ino
test/sketches/camera/: camera.ino
test/sketches/characters/: characters.ino
test/sketches/jun_only/: jun_only.jun
test/sketches/patch/: patch.ino
test/sketches/pins/: pins.ino
test/sketches/sd_fs/: sd_fs.ino
test/sketches/serial/: serial.ino
test/sketches/strconv/: strconv.ino
test/sketches/uart/: uart.ino
test/sketches/uart_invalid/: uart_invalid.ino
test/sketches/wifi/: wifi.ino
test/test_dir/manifests/: BadName.cmake  BadUriLocation.cmake  BadUriScheme.cmake  NoVersion.cmake
test/test_dir/plugins/UDDProvider/src/: UDDProvider.hpp
test/test_dir/sketches/udd_consumer/: udd_consumer.ino
test/test_dir/sketches/wifi/: wifi.ino
test/test_dir/smce_root/RtResources/Ardrivo/include/SMCE_rt/internal/: BoardDeviceAllocationBases.hpp  SMCE_api.hpp
test/test_dir/smce_root/RtResources/SMCE/share/CMake/Runtime/: CMakeLists.txt
